--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,11 @@ body {
 	padding-bottom: 1em;
 }
 
+#form{
+	display: inline-block;
+	position: relative;
+	margin-left: -70px;
+}
 
 #Orignal{
 	color: #00ff00;
@@ -94,7 +99,7 @@ body {
 	height: 100%;
 	display: block;
 	position: absolute;
-	left: -200px;
+	left: 0px;
 	top: 0;
 	transition: left 0.3s linear;
 }
@@ -104,32 +109,6 @@ body {
 	z-index: 99;
 	transition: left 0.3s linear;
 }
-
-#sidebar-btn {
-	z-index: 99;
-	display: inline-block;
-	vertical-align: middle;
-	width: 20px;
-	height: 15px;
-	cursor: pointer;
-	margin: 20px;
-	position: absolute;
-	top: 0;
-	right: -60px;
-}
-
-#sidebar-btn span {
-	z-index: 99;
-	height: 5px;
-	width: 150%;
-	background: #1c1e1f;
-	margin-bottom: 5px;
-	display: block;
-}
-
-#sidebar-btn span:nth-child(2) { width: 125%; }
-
-#sidebar-btn span:nth-child(3) { width: 125%; }
 
 ul {
 	margin: 0;
@@ -146,19 +125,10 @@ ul li a {
 	color: #ccc;
 	border-bottom: 1px solid #111;
 	display: block;
-	width: 160px;
+	width: 200px;
 	padding: 10px;
 	padding-left: 30px;
 	text-decoration: none;
-}
-
-span.expand::before {
-	content: '';
-	position: absolute;
-	top: -50%;
-	left: -50%;
-	right: -50%;
-	bottom: -50%;
 }
 
 /* tooltip */
@@ -198,4 +168,47 @@ span.expand::before {
 	position: absolute;
 	top: 10px;
 	left: 100px;
+}
+
+@media screen and (max-width:720px) {
+
+	#sidebar {
+		left: -200px;
+	}
+
+	#sidebar-btn {
+		z-index: 99;
+		display: inline-block;
+		vertical-align: middle;
+		width: 20px;
+		height: 15px;
+		cursor: pointer;
+		margin: 20px;
+		position: absolute;
+		top: 0;
+		right: -60px;
+	}
+
+	#sidebar-btn span {
+		z-index: 99;
+		height: 5px;
+		width: 150%;
+		background: #1c1e1f;
+		margin-bottom: 5px;
+		display: block;
+	}
+
+	#sidebar-btn span:nth-child(2) { width: 125%; }
+
+	#sidebar-btn span:nth-child(3) { width: 125%; }
+
+	span.expand::before {
+	content: '';
+	position: absolute;
+	top: -50%;
+	left: -50%;
+	right: -50%;
+	bottom: -50%;
+}
+
 }
